========================
   beancount: CHANGES
========================
Note: This file contains a list changes in the 'default' branch.


2018-08-17

  - Added 'issuer' column to the export script. I'm going to use this to produce
    a deaggregated list of exposure to individual stocks from a list of ETFs.


2018-08-12

  - After many years of using something like it to track my investment portfolio
    using a Google Sheets doc, I cleaned up, rewrote and move the asset list
    exporting script to beancount.projects.export and deleted the old version
    under experiments/upload.


2018-08-05

  - Fixed #322: Adjustments to StopIteration treatment from within generators
    were breaking bean-example generation code.

  - Implemented a new plugin which asserts that on accounts with 'NONE' booking
    method reducing postings' cost basis is within the vicinity of the average
    cost basis in the account. This allows you to approximate the 'AVERAGE'
    booking method avoid too much cost basis leakage until it's implemented
    properly.


2018-08-02

  - Created a new 'commodity_attr' plugin to asset the presence and validity
    (in a set, like an enum) of metadata attributes on Commodity directives.

    I export my holdings joined to a table of per-Commodity attributes and I've
    made a mistake this week that ended up showing up as an overestimated
    portfolio value on my portfolio tracking Google Sheets doc.


2018-07-31

  - Fixed bug in new ingest() function found as I refactored my importers.

  - Fixed bug with the pipeline making sure to set the CWD of the subprocess
    when we run an import test.

  - Fixed bug with previous commit containing stray 'string' reference. (My
    environment has autoimports by default.)

  - Implemented a beancount.ingest.scripts_utils.ingest() function that will act
    as a main program, so you can write your own importer scripts from top to