@@ -3,6 +3,11 @@
 ========================
 Note: This file contains a list changes in the 'default' branch.
 
+2018-08-23
+
+  - Fixed #325: Implemented support for including encrypted files (for Milind Kamble
+    and using some of this changes).
+
 
 2018-08-17
 
